Added max user reg and rate limit

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 XMPP_BRIDGE_CONFIG_FILE=/usr/local/etc/xmpp-bridge-config.yml
-XMPP_BRIDGE_NAME=name@example.net
+XMPP_BRIDGE_NAME=name@example.social
 XMPP_BRIDGE_TOKEN=YourSecretTokenHere
-AP_BRIDGE_JID=name@example.net
+AP_BRIDGE_JID=name@example.im
 AP_BRIDGE_PASS=YourSecretPasswordHere
